[gd_scene load_steps=3 format=3 uid="uid://bud05fo1b65ng"]

[ext_resource type="Script" path="res://ui/screens/editor/editor.gd" id="1_p86jn"]
[ext_resource type="Theme" uid="uid://5xtrjtnvd7aa" path="res://ui/screens/editor/sidebar_buttons.tres" id="2_wnhlq"]

[node name="EditorUI" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4
script = ExtResource("1_p86jn")

[node name="EditorSidebar" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="EditorSidebar"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="SidebarVBox" type="VBoxContainer" parent="EditorSidebar/Margin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_wnhlq")

[node name="LayoutContainer" type="TabContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tabs_visible = false

[connection signal="gui_input" from="EditorSidebar/Margin/SidebarVBox" to="." method="_on_sidebar_gui_event"]
